# tudorex_autotools_framework

./: Makefile.am  README.md  autogen.sh  compile.sh  configure.ac
